lesson/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  # defaultBackend:
  #   service:
  #     name: svc-ingress
  #     port:
  #       number: 80
  rules:
    - host: "kubernetes.docker.internal"
      http:
        paths:
        - path: /person
          pathType: Prefix
          backend:
            service: 
              name: kubernetes-research
              port: 
                number: 8080
        - path: /test
          pathType: Prefix
          backend:
            service: 
              name: python-rest
              port: 
                number: 5000
